--- a/config.yaml
+++ b/config.yaml
@@ -1,78 +1,104 @@
 # Configuration for the Landslide Vulnerability Pipeline
 
-# 1. Project Setup
 project_structure:
-  saga_cmd_path: '/usr/bin/saga_cmd'
-  raw_data_dir: 'raw/'
-  derived_data_dir: 'derivs/'
-  tiles_dir: 'tiles/'
-  labels_dir: 'labels/'
-  splits_dir: 'splits/'
-  experiments_dir: 'experiments/'
-  source_dir: 'src/'
+  raw_data_dir: artifacts/raw
+  derived_data_dir: artifacts/derived
+  tiles_dir: artifacts/tiles
+  labels_dir: artifacts/labels
+  splits_dir: artifacts/splits
+  experiments_dir: artifacts/experiments
+  outputs_dir: outputs
+  metadata_dir: artifacts/metadata
 
-# 2. Synthetic Data Generation
-data_generation:
-  dtm_shape: [256, 256]
-  ortho_shape: [256, 256, 3]
-  gt_shape: [256, 256]
-  seed: 42
+inputs:
+  module: inputs
+  train:
+    dtm_attr: DTM_train
+    ortho_attr: ortophoto_train
+    ground_truth_attr: ground_truth_train
+  test:
+    dtm_attr: DTM_test
+    ortho_attr: ortophoto_test
+    ground_truth_attr: null
 
-# 3. Pre-processing & Feature Stack
 preprocessing:
-  target_gsd: 1.0 # meters
+  resampling:
+    ortho: bilinear
+    ground_truth: nearest
   dtm_hygiene:
-    sink_filling: true
-  derived_dtm_channels:
-    - slope
-    - aspect
-    - general_curvature
-    - plan_curvature
-    - profile_curvature
-    - tpi
-    - tri
-    - flow_accumulation
-    - twi
-    - spi
-    - sti
-  derived_ortho_channels:
-    - land_use_cover
-  normalization: 'z-score'
+    sink_fill_kernel: 5
+    gaussian_sigma: 1.0
+  hydrology:
+    drainage_threshold: 5000.0
+  derived_channels:
+    include_dtm: true
+    include_slope: true
+    include_aspect_sin_cos: true
+    include_curvatures: true
+    include_tpi: true
+    include_tri: true
+    include_flow_accumulation: true
+    include_twi: true
+    include_spi: true
+    include_sti: true
+    include_distance_to_drainage: true
+  orthophoto_channels:
+    radiometric_normalization: zscore
+    land_cover_clusters: 6
+  normalization:
+    strategy: zscore
+    epsilon: 1.0e-6
+  boundary_ignore_pixels: 2
+  min_valid_fraction: 0.55
 
-# 4. Dataset Splits & Tiling
 dataset:
-  test_size: 0.2
+  tile_size: 512
+  tile_overlap: 64
+  block_grid: [1, 1]
+  positive_class: 2
+  positive_min_fraction: 0.01
+  positive_fraction: 0.5
+  negative_slope_threshold_deg: 30.0
+  min_valid_fraction: 0.5
   val_size: 0.15
-  split_strategy: 'spatial_block'
-  tile_size: 32
-  tile_overlap: 8
+  test_size: 0.2
+  max_tiles_per_split: null
+  random_state: 42
 
-# 5. Modeling
 model:
-  name: 'Unet'
-  encoder: 'resnet34'
-  in_channels: 14
-  out_classes: 1 # For binary segmentation (susceptibility)
+  encoder: resnet34
+  encoder_weights: imagenet
+  out_classes: 3
+  dropout_prob: 0.2
 
-# 6. Training Protocol
 training:
-  batch_size: 8
-  learning_rate: 0.001
-  lr_scheduler: 'cosine'
-  optimizer: 'adam'
-  loss: 'bce_dice'
-  epochs: 50
-  early_stopping_patience: 10
-  mixed_precision: true
-
-# 7. Inference
-inference:
   batch_size: 4
-  window_size: 1024
-  overlap: 128
-  tta: true # test-time augmentation
-  mc_dropout_iterations: 10 # for uncertainty
+  learning_rate: 0.0003
+  weight_decay: 1.0e-4
+  epochs: 20
+  lr_scheduler: cosine
+  early_stopping_patience: 5
+  mixed_precision: true
+  gradient_clip_norm: 1.0
+  augmentations:
+    brightness: 0.2
+    contrast: 0.2
+    saturation: 0.2
+    hue: 0.02
+    blur_prob: 0.1
+    noise_std: 0.01
+    flip_prob: 0.5
 
-# 8. Reproducibility
+metrics:
+  calibration_bins: 15
+
+inference:
+  window_size: 512
+  overlap: 256
+  tta: true
+  mc_dropout_iterations: 5
+  batch_size: 2
+
 reproducibility:
   seed: 42
+
