Enhance inference pipeline with weighted blending, TTA, and CRF
- Updated train.py to improve device selection logic for CUDA compatibility.
- Refactored existing artifact return structure in train_model function.
- Modified visualize.py to import calibration_curve from sklearn.calibration.
- Added comprehensive blending, TTA, and CRF implementation details in new markdown files:
  - BLENDING_IMPLEMENTATION.md: Detailed explanation of blending techniques, TTA enhancements, and CRF integration.
  - INFERENCE_ENHANCEMENTS.md: Summary of advanced inference techniques and their configurations.
  - INFERENCE_QUICK_REF.md: Quick reference guide for inference parameters and configurations.
- Introduced new configuration options in config.yaml for blending, TTA, and CRF settings.
- Ensured backward compatibility and graceful degradation for new features.

--- a/config.yaml
+++ b/config.yaml
@@ -72,6 +72,7 @@ model:
   dropout_prob: 0.2
 
 training:
+  use_cuda: false  # Set to true only if GPU is compatible (requires CUDA compute capability >= 7.0)
   batch_size: 4
   learning_rate: 0.0003
   weight_decay: 1.0e-4
@@ -93,11 +94,23 @@ metrics:
   calibration_bins: 15
 
 inference:
+  use_cuda: false  # Set to true only if GPU is compatible (requires CUDA compute capability >= 7.0)
   window_size: 512
   overlap: 256
   tta: true
+  tta_augmentations: 8  # Number of TTA augmentations (0=disabled, 4=basic, 8=full)
   mc_dropout_iterations: 5
   batch_size: 2
+  blending:
+    method: gaussian  # Options: gaussian, linear, none
+    sigma_factor: 0.3  # For gaussian: sigma = overlap * sigma_factor
+  crf:
+    enabled: true
+    iterations: 5  # Number of CRF inference iterations
+    spatial_weight: 3.0  # Bilateral spatial standard deviation
+    color_weight: 3.0  # Bilateral color/feature standard deviation
+    compat_spatial: 3.0  # Spatial compatibility weight
+    compat_bilateral: 10.0  # Bilateral compatibility weight
 
 reproducibility:
   seed: 42
