Add configuration validation scripts for V2.5 and V2 improvements
- Implemented `validate_v2.5_config.sh` to validate the V2.5 configuration, including checks for Python version, imbalanced-learn installation, and various settings in `config.yaml`.
- Developed `validate_v2_config.py` to validate the V2 aggressive improvements configuration, ensuring correct dataset oversampling, training configuration, backup files, and model settings.
- Both scripts provide detailed output for validation results and next steps for retraining.

--- a/config.yaml
+++ b/config.yaml
@@ -67,6 +67,8 @@ preprocessing:
   min_valid_fraction: 0.4  # RELAXED from 0.55 to match dataset min_valid_fraction
 
 dataset:
+  use_mixed_domain: true  # NEW V2.5: Merge training and test areas for geographic generalization
+  export_geotiff_tiles: true  # NEW V2.5: Export tiles as GeoTIFF for spatial inspection
   tile_size: 256  # REDUCED from 512 to create ~4x more tiles
   tile_overlap: 128  # REDUCED proportionally (was 64)
   block_grid: [1, 1]
@@ -75,37 +77,52 @@ dataset:
   positive_fraction: 0.3  # REDUCED from 0.5 to allow more negative tiles
   negative_slope_threshold_deg: 30.0
   min_valid_fraction: 0.4  # RELAXED from 0.5 (40% instead of 50%)
+  # Class 1 (Medium-Risk) Oversampling - AGGRESSIVE IMPROVEMENT
+  oversample_class: 1  # Class to oversample (1 = medium-risk)
+  oversample_target_fraction: 0.075  # V2.5 INCREASED: Target 7.5% (was 5%)
+  use_smote: true  # NEW V2.5: Generate synthetic Class 1 examples via SMOTE
+  smote_k_neighbors: 5  # NEW V2.5: SMOTE neighbors for synthetic generation
   val_size: 0.15
   test_size: 0.2
   max_tiles_per_split: null
+  max_split_attempts: 20  # NEW: Maximum attempts to find test split with all classes
   random_state: 42
 
 model:
-  encoder: resnet34
+  encoder: efficientnet-b4  # UPGRADED V2.5: Compound scaling for better feature learning (was resnet50)
   encoder_weights: imagenet
   out_classes: 3
   dropout_prob: 0.4  # INCREASED: More regularization (was 0.2)
+  attention: true  # NEW V2.5: Enable spatial attention mechanism
 
 training:
   use_cuda: false  # Set to true only if GPU is compatible (requires CUDA compute capability >= 7.0)
   batch_size: 4
   learning_rate: 0.0003
   weight_decay: 1.0e-4
-  epochs: 40  # INCREASED: More epochs for better convergence (was 30)
+  epochs: 60  # INCREASED AGAIN: More epochs for CORAL convergence (was 50)
   lr_scheduler: cosine
-  early_stopping_patience: 10  # INCREASED: More patience (was 7)
+  early_stopping_patience: 15  # INCREASED: More patience for ordinal loss (was 12)
   mixed_precision: true
   gradient_clip_norm: 1.0
-  use_focal_loss: true  # NEW: Enable focal loss for class imbalance
-  focal_gamma: 2.0  # NEW: Focusing parameter (2.0 is standard)
+  use_focal_loss: true  # ENABLED: Focal loss for class imbalance
+  use_ordinal_loss: true  # NEW AGGRESSIVE IMPROVEMENT: Enable CORAL for ordinal constraints
+  focal_gamma: 2.5  # INCREASED: More focus on hard examples (was 2.0)
+  coral_weight: 0.3  # NEW: Weight for CORAL loss component (balances with FocalDice)
+  class_weights: [0.4, 2.5, 2.0]  # ADJUSTED: More balanced [Low, Medium, High] - was [0.5, 3.0, 1.5]
+  # Class weights explanation:
+  #   0.4 for Low (91% of data) - Slightly down-weight majority class
+  #   2.5 for Medium (2.65% of data) - Strong emphasis but less aggressive than 3.0
+  #   2.0 for High (5.66% of data) - Boost to prevent precision drop
   augmentations:
-    brightness: 0.3  # INCREASED: More aggressive (was 0.2)
-    contrast: 0.3  # INCREASED: More aggressive (was 0.2)
-    saturation: 0.3  # INCREASED: More aggressive (was 0.2)
-    hue: 0.05  # INCREASED: More aggressive (was 0.02)
-    blur_prob: 0.2  # INCREASED: More frequent (was 0.1)
-    noise_std: 0.02  # INCREASED: More noise (was 0.01)
+    brightness: 0.4  # INCREASED: More aggressive (was 0.3)
+    contrast: 0.4  # INCREASED: More aggressive (was 0.3)
+    saturation: 0.4  # INCREASED: More aggressive (was 0.3)
+    hue: 0.08  # INCREASED: More aggressive (was 0.05)
+    blur_prob: 0.3  # INCREASED: More frequent (was 0.2)
+    noise_std: 0.03  # INCREASED: More noise (was 0.02)
     flip_prob: 0.5
+    rotate90: true
 
 metrics:
   calibration_bins: 15
@@ -121,16 +138,22 @@ inference:
   smoothing_alpha: 0.1  # ADJUSTED: Gentle probability smoothing (was 0.0 or 0.5)
   class_breaks: [0.33, 0.67]  # FIXED: Aligned with ordinal scale [0, 1] for 3 equal classes
   temperature_override: 1.0  # FIXED: Disabled temperature override (was 2.5 - too aggressive)
+  # Production-ready threshold presets
+  threshold_mode: safety  # Options: safety (high recall), balanced, precision (high precision)
+  threshold_presets:
+    safety: 0.45  # 93% recall for high-risk detection
+    balanced: 0.60  # Trade-off between recall and precision
+    precision: 0.75  # Minimize false positives
   blending:
     method: gaussian  # Options: gaussian, linear, none
     sigma_factor: 0.3  # For gaussian: sigma = overlap * sigma_factor
   crf:
-    enabled: false
-    iterations: 5  # Number of CRF inference iterations
-    spatial_weight: 3.0  # Bilateral spatial standard deviation
+    enabled: true  # V2.5 ENABLED: Spatial smoothing for better Class 1 boundaries
+    iterations: 8  # V2.5 INCREASED: More refinement (was 5)
+    spatial_weight: 5.0  # V2.5 ADJUSTED: Stronger spatial prior (was 3.0)
     color_weight: 3.0  # Bilateral color/feature standard deviation
-    compat_spatial: 3.0  # Spatial compatibility weight
-    compat_bilateral: 10.0  # Bilateral compatibility weight
+    compat_spatial: 5.0  # V2.5 ADJUSTED: Stronger spatial smoothing (was 3.0)
+    compat_bilateral: 15.0  # V2.5 INCREASED: Stronger feature agreement (was 10.0)
     tile_size: 4096  # Tile size for memory-efficient CRF processing
     overlap: 2048  # Overlap between CRF tiles for smooth blending
 
